objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <inlineHelpText>Discount percentage based on Total price and Sale Price.</inlineHelpText>
        <label>Discount Given (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_this_PS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this PS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>Text(PricebookEntry.Product2.Product_Group__c)</formula>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>Quantity *  ListPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>if( Is_this_PS__c = false, (Quantity* UnitPrice* of_Months__c),Quantity* UnitPrice)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity*Sale Price*number of months</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Days__c</fullName>
        <defaultValue>365</defaultValue>
        <description>If this is NOT an annual subs, please enter the number of Days</description>
        <inlineHelpText>If this is NOT an annual subs, please enter the number of Days</inlineHelpText>
        <label># of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <description>Contract period</description>
        <inlineHelpText>If this is NOT an annual subs, please enter the number of Months.</inlineHelpText>
        <label># of Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Product_Group</fullName>
        <active>false</active>
        <description>Product Group to be selected</description>
        <errorConditionFormula>true</errorConditionFormula>
        <errorMessage>Product Group cannot be empty</errorMessage>
    </validationRules>
</CustomObject>